test/parallel/forall/vass/reduce/reduce-assign-3-lhs-error.good
reduce-assign-3-lhs-error.chpl:7: error: The l.h.s. of a reduce= operator must be just a variable
